--- a/res/values-as/strings.xml
+++ b/res/values-as/strings.xml
@@ -48,9 +48,9 @@
     <string name="selective_stay_awake_title" msgid="7887645333447645168">"কেৱল গে’ম, ভিডিঅ’ আৰু বহুতো"</string>
     <string name="selective_stay_awake_summary" msgid="9055967322921984543">"আপোনাৰ স্ক্ৰীনখন নিষ্ক্ৰিয় হোৱাটো বন্ধ কৰা এপৰ বাবে ফ্ৰণ্ট ডিছপ্লে’ অন কৰে"</string>
     <string name="stay_awake_on_lockscreen_title" msgid="8088456642083051068">"অব্যাহত ৰাখিবলৈ ওপৰলৈ ছোৱাইপ কৰক"</string>
-    <string name="stay_awake_on_lockscreen_summary" msgid="2299351813382522952">"এপ্‌টো ব্যৱহাৰ কৰি থাকিবলৈ আপোনাৰ ফ’নটো ভাঁজ কৰক আৰু ফ্ৰণ্ট ডিছপ্লে’ত ওপৰলৈ ছোৱাইপ কৰক বা স্ক্ৰীনখন লক হোৱাৰ বাবে কেইছেকেণ্ডমান অপেক্ষা কৰক"</string>
+    <string name="stay_awake_on_lockscreen_summary" msgid="8825321939913726566">"এপ্‌টো ব্যৱহাৰ কৰি থাকিবলৈ আপোনাৰ ফ’নটো ভাঁজ কৰক আৰু ফ্ৰণ্ট ডিছপ্লে’ত ওপৰলৈ ছোৱাইপ কৰক বা স্ক্ৰীনখন লক হোৱালৈ কেইছেকেণ্ডমান অপেক্ষা কৰক। গে’ম আৰু ভিডিঅ’ এপ্‌সমূহ স্বয়ংক্ৰিয়ভাৱে চলিয়েই থাকিব।"</string>
     <string name="sleep_on_fold_title" msgid="7626123024330501411">"কেতিয়াও নহয়"</string>
-    <string name="sleep_on_fold_summary" msgid="7737992842459588846">"আপুনি নিজৰ ডিভাইচটো জপালে ফ্ৰণ্ট ডিছপ্লে’ লক হয়"</string>
+    <string name="sleep_on_fold_summary" msgid="4191753338303043456">"আপুনি নিজৰ ডিভাইচটো জপালে ফ্ৰণ্ট ডিছপ্লে’ অফ আৰু লক হয়"</string>
     <string name="auto_rotate_settings_primary_switch_title" msgid="3440951924928594520">"স্বয়ং-ঘূৰ্ণনৰ সুবিধা ব্যৱহাৰ কৰক"</string>
     <string name="smart_rotate_text_headline" msgid="5878008933992951904">"মুখাৱয়ব চিনাক্তকৰণ সুবিধাটোৱে স্বয়ং-ঘূৰ্ণনৰ সঠিকতা উন্নত কৰিবলৈ সন্মুখৰ কেমেৰা ব্যৱহাৰ কৰে। প্ৰতিচ্ছবি কেতিয়াও ষ্ট’ৰ কৰা নহয় অথবা Googleলৈ পঠিওৱা নহয়।"</string>
     <string name="bluetooth" msgid="8898478620943459654">"ব্লুটুথ"</string>
@@ -984,7 +984,7 @@
     <string name="wifi_dpp_sharing_wifi_with_this_device" msgid="7250369936882080107">"এই ডিভাইচটোৰ সৈতে ৱাই-ফাই শ্বেয়াৰ কৰি থকা হৈছে…"</string>
     <string name="wifi_dpp_connecting" msgid="2312769193202897589">"সংযোগ কৰি থকা হৈছে…"</string>
     <string name="wifi_dpp_share_hotspot" msgid="6186452780604755316">"হ’টস্প’ট শ্বেয়াৰ কৰক"</string>
-    <string name="wifi_dpp_lockscreen_title" msgid="5246641326066972419">"এইজন আপুনি বুলি ভেৰিফাই কৰক"</string>
+    <string name="wifi_dpp_lockscreen_title" msgid="5246641326066972419">"এয়া আপুনিয়েই বুলি সত্যাপন কৰক"</string>
     <string name="wifi_dpp_wifi_password" msgid="4992986319806934381">"ৱাই-ফাইৰ পাছৱৰ্ড: <xliff:g id="PASSWORD">%1$s</xliff:g>"</string>
     <string name="wifi_dpp_hotspot_password" msgid="688464342650820420">"হটস্পটৰ পাছৱৰ্ড: <xliff:g id="PASSWORD">%1$s</xliff:g>"</string>
     <string name="wifi_auto_connect_title" msgid="1890342051674657892">"স্বয়ং-সংযোগ"</string>
@@ -1997,7 +1997,7 @@
     <string name="display_category_title" msgid="6638191682294461408">"ডিছপ্লে’"</string>
     <string name="accessibility_color_and_motion_title" msgid="2323301706545305874">"ৰং আৰু ম’শ্বন"</string>
     <string name="accessibility_color_contrast_title" msgid="5757724357142452378">"ৰঙৰ কনট্ৰাষ্ট"</string>
-    <string name="accessibility_color_contrast_intro" msgid="7795090401101214930">"উচ্চ কনট্ৰাষ্টে পাঠ, বুটাম আৰু চিহ্নসমূহক অধিক জিলিকাই ৰাখে। আপোনাৰ বাবে যিটো কনট্ৰাষ্ট আটাইতকৈ ভাল লাগে সেইটো বাছনি কৰক।"</string>
+    <string name="accessibility_color_contrast_intro" msgid="7795090401101214930">"উচ্চ কনট্ৰাষ্টে পাঠ, বুটাম আৰু চিহ্নসমূহক অধিক জিলিকাই ৰাখে। আপোনাৰ যিটো কনট্ৰাষ্ট আটাইতকৈ ভাল লাগে সেইটো বাছনি কৰক।"</string>
     <string name="color_contrast_note" msgid="7592686603372566198">"কিছুমান এপে আটাইবোৰ ৰং আৰু পাঠৰ কনট্ৰাষ্টৰ ছেটিং সমৰ্থন নকৰিবও পাৰে"</string>
     <string name="accessibility_color_contrast_summary" msgid="7563237683500106632">"আপোনাৰ স্ক্ৰীনৰ পটভূমিৰ ৰঙৰ বিপৰীতে ৰং আৰু পাঠ কেনেকুৱা দেখা যায় সেইটো মিলাওক"</string>
     <string name="color_contrast_preview" msgid="6791430227535363883">"পূৰ্বদৰ্শন কৰক"</string>
@@ -3924,9 +3924,6 @@
     <string name="permit_manage_external_storage" msgid="6928847280689401761">"আটাইবোৰ ফাইল পৰিচালনা কৰিবলৈ এক্সেছ দিয়ক"</string>
     <string name="allow_manage_external_storage_description" msgid="5707948153603253225">"এই এপ্‌টোক এই ডিভাইচটোত অথবা অন্য যিকোনো সংযুক্ত ষ্ট’ৰেজৰ ভলিউমসমূহত আটাইবোৰ ফাইল পঢ়িবলৈ, সংশোধন কৰিবলৈ আৰু মচিবলৈ অনুমতি দিয়ক। যদি অনুমতি দিয়ে, আপোনাৰ নিশ্চিত জ্ঞানৰ অবিহনে এপে ফাইলবোৰ এক্সেছ কৰিব পাৰে।"</string>
     <string name="filter_manage_external_storage" msgid="6751640571715343804">"আটাইবোৰ ফাইল এক্সেছ কৰিব পাৰে"</string>
-    <string name="voice_activation_apps_title" msgid="7130045161611529825">"কন্ঠস্বৰ সক্ৰিয়কৰণৰ এপ্"</string>
-    <string name="permit_voice_activation_apps" msgid="9152780172988949319">"কণ্ঠস্বৰ সক্ৰিয়কৰণৰ অনুমতি দিয়ক"</string>
-    <string name="allow_voice_activation_apps_description" msgid="6369745626995060656">"কন্ঠস্বৰ সক্ৰিয়কৰণে কণ্ঠস্বৰৰ নিৰ্দেশেৰে অনুমোদিত এপ্, হেণ্ডছ্‌-ফ্ৰী অন কৰে। বিল্ট-ইন অভিযোজিত ছেন্সিঙে ডেটা কেৱল আপোনাৰ বাবে ব্যক্তিগত হৈ থকাটো নিশ্চিত কৰে।\n\n"<a href="">"সুৰক্ষিত অভিযোজিত ছেন্সিঙৰ বিষয়ে অধিক"</a></string>
     <string name="full_screen_intent_title" msgid="747270185715224130">"সম্পূৰ্ণ স্ক্ৰীনৰ জাননী"</string>
     <string name="permit_full_screen_intent" msgid="9035367640019960861">"এই এপ্‌টোৰ পৰা সম্পূৰ্ণ স্ক্ৰীনৰ জাননীৰ অনুমতি দিয়ক"</string>
     <string name="footer_description_full_screen_intent" msgid="7716518411349225528">"এই এপ্‌টোক ডিভাইচ লক হৈ থাকোঁতে পূৰ্ণ স্ক্ৰীনত ওলোৱা জাননীসমূহ দেখুওৱাৰ অনুমতি দিয়ক। এপ্‌সমূহে এইবোৰ এলাৰ্ম, অন্তৰ্গামী কল অথবা অন্য জৰুৰী জাননীসমূহ হাইলাইট কৰিবলৈ ব্যৱহাৰ কৰিব পাৰে।"</string>
