--- a/res/values-gl/strings.xml
+++ b/res/values-gl/strings.xml
@@ -48,9 +48,9 @@
     <string name="selective_stay_awake_title" msgid="7887645333447645168">"Só xogos, vídeos e outros"</string>
     <string name="selective_stay_awake_summary" msgid="9055967322921984543">"A pantalla frontal acenderase para as aplicacións que impiden que a pantalla quede inactiva"</string>
     <string name="stay_awake_on_lockscreen_title" msgid="8088456642083051068">"Pasar dedo cara arriba para continuar"</string>
-    <string name="stay_awake_on_lockscreen_summary" msgid="2299351813382522952">"Prega o teléfono e pasa o dedo cara arriba na pantalla frontal para seguir usando a aplicación ou agarda uns segundos a que se bloquee a pantalla"</string>
+    <string name="stay_awake_on_lockscreen_summary" msgid="8825321939913726566">"Prega o teléfono e pasa o dedo cara arriba na pantalla frontal para seguir usando a aplicación, ou agarda uns segundos a que se bloquee a pantalla. Os xogos e as aplicacións de vídeo continuarán automaticamente."</string>
     <string name="sleep_on_fold_title" msgid="7626123024330501411">"Nunca"</string>
-    <string name="sleep_on_fold_summary" msgid="7737992842459588846">"A pantalla frontal bloquearase cando pregues o dispositivo"</string>
+    <string name="sleep_on_fold_summary" msgid="4191753338303043456">"A pantalla frontal desactivarase e bloquearase cando pregues o dispositivo"</string>
     <string name="auto_rotate_settings_primary_switch_title" msgid="3440951924928594520">"Usar a función de xirar automaticamente"</string>
     <string name="smart_rotate_text_headline" msgid="5878008933992951904">"A función Detección facial utiliza a cámara frontal para mellorar a precisión da opción de xirar automaticamente. As imaxes nunca se almacenan nin se envían a Google."</string>
     <string name="bluetooth" msgid="8898478620943459654">"Bluetooth"</string>
@@ -984,7 +984,7 @@
     <string name="wifi_dpp_sharing_wifi_with_this_device" msgid="7250369936882080107">"Compartindo a wifi con este dispositivo…"</string>
     <string name="wifi_dpp_connecting" msgid="2312769193202897589">"Conectando…"</string>
     <string name="wifi_dpp_share_hotspot" msgid="6186452780604755316">"Compartir zona wifi"</string>
-    <string name="wifi_dpp_lockscreen_title" msgid="5246641326066972419">"Verificar que es ti"</string>
+    <string name="wifi_dpp_lockscreen_title" msgid="5246641326066972419">"Verificar a túa identidade"</string>
     <string name="wifi_dpp_wifi_password" msgid="4992986319806934381">"Contrasinal da rede wifi: <xliff:g id="PASSWORD">%1$s</xliff:g>"</string>
     <string name="wifi_dpp_hotspot_password" msgid="688464342650820420">"Contrasinal da zona wifi: <xliff:g id="PASSWORD">%1$s</xliff:g>"</string>
     <string name="wifi_auto_connect_title" msgid="1890342051674657892">"Conectar automaticamente"</string>
@@ -2003,7 +2003,7 @@
     <string name="color_contrast_preview" msgid="6791430227535363883">"Vista previa"</string>
     <string name="color_contrast_preview_sender_name" msgid="8641943417589238147">"Helen, Adam"</string>
     <string name="color_contrast_preview_email_send_date" msgid="2108702726171600080">"Hai 2 días"</string>
-    <string name="color_contrast_preview_email_badge" msgid="4845484039428505392">"Seguimento?"</string>
+    <string name="color_contrast_preview_email_badge" msgid="4845484039428505392">"Seguir?"</string>
     <string name="color_contrast_preview_email_title" msgid="198712116139754823">"Informe de viaxe de negocios"</string>
     <string name="color_contrast_preview_email_body" msgid="4139331665325624199">"Para ter asistencia adicional, ponte en contacto \ncomigo ou con Helen. O informe vai ser"</string>
     <string name="color_contrast_preview_email_attachment_name" msgid="852407311884814746">"Gastos do cliente"</string>
@@ -3242,7 +3242,7 @@
     <string name="live_caption_summary" msgid="2898451867595161809">"Crea subtítulos automáticos"</string>
     <string name="spatial_audio_wired_headphones" msgid="2237355789145828648">"Auriculares con cable"</string>
     <string name="spatial_audio_text" msgid="8201387855375146000">"O audio dos contidos multimedia compatibles ofréceche unha experiencia máis envolvente"</string>
-    <string name="spatial_summary_off" msgid="8272678804629774378">"Opción desactivada"</string>
+    <string name="spatial_summary_off" msgid="8272678804629774378">"Desactivado"</string>
     <string name="spatial_summary_on_one" msgid="6239933399496282994">"Opción activada/<xliff:g id="OUTPUT_DEVICE">%1$s</xliff:g>"</string>
     <string name="spatial_summary_on_two" msgid="4526919818832483883">"Opción activada / <xliff:g id="OUTPUT_DEVICE_0">%1$s</xliff:g> e <xliff:g id="OUTPUT_DEVICE_1">%2$s</xliff:g>"</string>
     <string name="spatial_audio_footer_title" msgid="8775010547623606088">"Tamén podes activar o audio espacial para dispositivos Bluetooth."</string>
@@ -3924,9 +3924,6 @@
     <string name="permit_manage_external_storage" msgid="6928847280689401761">"Permitir xestionar todos os ficheiros"</string>
     <string name="allow_manage_external_storage_description" msgid="5707948153603253225">"Permite que esta aplicación lea, modifique e elimine todos os ficheiros deste dispositivo ou de calquera unidade de almacenamento conectada. Se lle dás permiso, a aplicación poderá acceder aos ficheiros sen que se che notifique explicitamente."</string>
     <string name="filter_manage_external_storage" msgid="6751640571715343804">"Poden acceder a todos os ficheiros"</string>
-    <string name="voice_activation_apps_title" msgid="7130045161611529825">"Aplicacións con activación por voz"</string>
-    <string name="permit_voice_activation_apps" msgid="9152780172988949319">"Permitir activación por voz"</string>
-    <string name="allow_voice_activation_apps_description" msgid="6369745626995060656">"A activación por voz inicia as aplicacións aprobadas por medio dun comando de voz, sen necesidade de que teñas que usar as mans. Grazas á detección intelixente, protexida e integrada, só ti podes acceder aos datos.\n\n"<a href="">"Máis información sobre a detección intelixente protexida"</a></string>
     <string name="full_screen_intent_title" msgid="747270185715224130">"Notificacións en pantalla completa"</string>
     <string name="permit_full_screen_intent" msgid="9035367640019960861">"Permitir notificacións en pantalla completa procedentes desta aplicación"</string>
     <string name="footer_description_full_screen_intent" msgid="7716518411349225528">"Permite que esta aplicación amose notificacións en pantalla completa cando o dispositivo estea bloqueado. A aplicación pode usar esta opción para destacar alarmas, chamadas entrantes ou outras notificacións urxentes."</string>
@@ -5092,9 +5089,9 @@
     <string name="color_selector_dialog_cancel" msgid="8667350644753900701">"Cancelar"</string>
     <string name="contrast_title" msgid="6885768151336508075">"Contraste"</string>
     <string name="contrast_standard" msgid="1097297089917185235">"Nivel estándar"</string>
-    <string name="contrast_default" msgid="8918545965525226966">"Valor predeterminado"</string>
-    <string name="contrast_medium" msgid="384414510709285811">"Nivel medio"</string>
-    <string name="contrast_high" msgid="3988567609694797696">"Nivel alto"</string>
+    <string name="contrast_default" msgid="8918545965525226966">"Predeterminado"</string>
+    <string name="contrast_medium" msgid="384414510709285811">"Medio"</string>
+    <string name="contrast_high" msgid="3988567609694797696">"Alto"</string>
     <string name="dock_multi_instances_not_supported_text" msgid="3513493664467667084">"Esta aplicación só se pode abrir en 1 ventá"</string>
     <string name="generic_accessibility_service_on" msgid="4466229372357726824">"Opción activada"</string>
     <string name="generic_accessibility_service_off" msgid="4759859497651675724">"Opción desactivada"</string>
