--- a/res/values-hi/strings.xml
+++ b/res/values-hi/strings.xml
@@ -48,9 +48,9 @@
     <string name="selective_stay_awake_title" msgid="7887645333447645168">"सिर्फ़ गेम, वीडियो वगैरह"</string>
     <string name="selective_stay_awake_summary" msgid="9055967322921984543">"स्क्रीन को बंद होने से रोकने वाले ऐप्लिकेशन के लिए फ़्रंट डिसप्ले चालू हो जाता है"</string>
     <string name="stay_awake_on_lockscreen_title" msgid="8088456642083051068">"जारी रखने के लिए, ऊपर की ओर स्वाइप करें"</string>
-    <string name="stay_awake_on_lockscreen_summary" msgid="2299351813382522952">"ऐप्लिकेशन का इस्तेमाल जारी रखने के लिए, फ़ोन को फ़ोल्ड करें और फ़्रंट डिसप्ले पर ऊपर की ओर स्वाइप करें या स्क्रीन लॉक होने के लिए, थोड़ा इंतज़ार करें"</string>
+    <string name="stay_awake_on_lockscreen_summary" msgid="8825321939913726566">"ऐप्लिकेशन का इस्तेमाल जारी रखने के लिए, फ़ोन को फ़ोल्ड करें और फ़्रंट डिसप्ले पर ऊपर की ओर स्वाइप करें या फिर कुछ सेकंड, स्क्रीन के लॉक होने तक इंतज़ार करें. गेम और वीडियो ऐप्लिकेशन अपने-आप चलने लगेंगे."</string>
     <string name="sleep_on_fold_title" msgid="7626123024330501411">"कभी नहीं"</string>
-    <string name="sleep_on_fold_summary" msgid="7737992842459588846">"डिवाइस को फ़ोल्ड करने पर फ़्रंट डिसप्ले लॉक हो जाता है"</string>
+    <string name="sleep_on_fold_summary" msgid="4191753338303043456">"डिवाइस फ़ोल्ड करने पर, फ़्रंट डिसप्ले बंद और लॉक हो जाता है"</string>
     <string name="auto_rotate_settings_primary_switch_title" msgid="3440951924928594520">"स्क्रीन की ओरिएंटेशन अपने-आप बदलने की सुविधा का इस्तेमाल करें"</string>
     <string name="smart_rotate_text_headline" msgid="5878008933992951904">"चेहरे की पहचान करने वाली तकनीक, स्क्रीन की ओरिएंटेशन अपने-आप बदलने की सुविधा को सटीक बनाने के लिए, सामने वाले कैमरे का इस्तेमाल करती है. हालांकि, ये इमेज न तो सेव की जाती हैं और न ही Google को भेजी जाती हैं."</string>
     <string name="bluetooth" msgid="8898478620943459654">"ब्लूटूथ"</string>
@@ -812,7 +812,7 @@
     <string name="bluetooth_device_context_pair_connect" msgid="2406032703622371826">"जोड़े और कनेक्‍ट करें"</string>
     <string name="bluetooth_empty_list_bluetooth_off" msgid="7326727272747345476">"ब्लूटूथ चालू होने पर, आपका डिवाइस आस-पास के ब्लूटूथ डिवाइसों से कनेक्ट हो सकता है"</string>
     <string name="bluetooth_empty_list_bluetooth_off_auto_on_available" msgid="5833847615853525971">"ब्लूटूथ चालू होने पर, आपका डिवाइस आस-पास मौजूद दूसरे ब्लूटूथ डिवाइसों से कनेक्ट हो सकता है. क्विक शेयर, Find My Device, और डिवाइस की जगह की जानकारी जैसी सुविधाएं ब्लूटूथ का इस्तेमाल करती हैं."</string>
-    <string name="bluetooth_scanning_on_info_message" msgid="786648535600075223">"ब्लूटूथ चालू हाेने पर, आपका डिवाइस आस-पास के ब्लूटूथ डिवाइसों से कनेक्ट हो सकता है. \n\nडिवाइस इस्तेमाल करने के अनुभव काे बेहतर बनाने के लिए, ऐप्लिकेशन और सेवाएं किसी भी समय आस-पास के डिवाइसों काे स्कैन कर सकती हैं. ऐसा ब्लूटूथ बंद होने पर भी किया जा सकता है. उदाहरण के लिए, इसका इस्तेमाल जगह से जुड़ी सुविधाओं और सेवाओं को बेहतर बनाने के लिए किया जा सकता है. ब्लूटूथ स्कैनिंग की सेटिंग में जाकर, इसे बदला जा सकता है."</string>
+    <string name="bluetooth_scanning_on_info_message" msgid="786648535600075223">"ब्लूटूथ चालू हाेने पर, आपका डिवाइस आस-पास के ब्लूटूथ डिवाइसों से कनेक्ट हो सकता है. \n\nडिवाइस इस्तेमाल करने के अनुभव काे बेहतर बनाने के लिए, ऐप्लिकेशन और सेवाएं किसी भी समय आस-पास के डिवाइसों काे स्कैन कर सकती हैं. ऐसा ब्लूटूथ बंद होने पर भी किया जा सकता है. उदाहरण के लिए, इसका इस्तेमाल जगह से जुड़ी सुविधाओं और सेवाओं को बेहतर बनाने के लिए किया जा सकता है. ब्लूटूथ डिवाइस का पता लगाने की सुविधा की सेटिंग में जाकर, इसे बदला जा सकता है."</string>
     <string name="bluetooth_scanning_on_info_message_auto_on_available" msgid="5047787966768730069">"ब्लूटूथ चालू होने पर, आपका डिवाइस आस-पास मौजूद दूसरे ब्लूटूथ डिवाइसों से कनेक्ट हो सकता है. क्विक शेयर, Find My Device, और डिवाइस की जगह की जानकारी जैसी सुविधाएं ब्लूटूथ का इस्तेमाल करती हैं.\n\nब्लूटूथ बंद होने पर, ऐप्लिकेशन और सेवाओं की मदद से किसी भी समय आस-पास के ब्लूटूथ डिवाइस काे स्कैन किया जा सकता है. उदाहरण के लिए, इसका इस्तेमाल जगह से जुड़ी सुविधाओं और सेवाओं को बेहतर बनाने के लिए किया जा सकता है. ब्लूटूथ डिवाइस का पता लगाने की सेटिंग में जाकर, इसे बदला जा सकता है."</string>
     <string name="bluetooth_scan_change" msgid="1744636222637390367">"बदलें"</string>
     <string name="device_details_title" msgid="1155622417516195481">"डिवाइस की जानकारी"</string>
@@ -1997,15 +1997,15 @@
     <string name="display_category_title" msgid="6638191682294461408">"डिसप्ले"</string>
     <string name="accessibility_color_and_motion_title" msgid="2323301706545305874">"रंग और मोशन"</string>
     <string name="accessibility_color_contrast_title" msgid="5757724357142452378">"कलर कंट्रास्ट"</string>
-    <string name="accessibility_color_contrast_intro" msgid="7795090401101214930">"ज़्यादा कंट्रास्ट की मदद से, टेक्स्ट, बटन, और आइकॉन सबसे अलग दिखते हैं. अपने लिए सबसे बेहतरीन कंट्रास्ट चुनें."</string>
-    <string name="color_contrast_note" msgid="7592686603372566198">"ऐसा हो सकता है कि कुछ ऐप्लिकेशन में, सभी रंग और टेक्स्ट के कंट्रास्ट की सेटिंग काम न करें"</string>
+    <string name="accessibility_color_contrast_intro" msgid="7795090401101214930">"ज़्यादा कंट्रास्ट होने से, टेक्स्ट, बटन, और आइकॉन सबसे अलग दिखते हैं. अपने लिए बेहतरीन कंट्रास्ट चुनें."</string>
+    <string name="color_contrast_note" msgid="7592686603372566198">"ऐसा हो सकता है कि कुछ ऐप्लिकेशन में, रंग और टेक्स्ट के कंट्रास्ट की सभी सेटिंग काम न करें"</string>
     <string name="accessibility_color_contrast_summary" msgid="7563237683500106632">"रंग और टेक्स्ट को स्क्रीन के बैकग्राउंड कलर के हिसाब से बदलें"</string>
     <string name="color_contrast_preview" msgid="6791430227535363883">"झलक देखें"</string>
-    <string name="color_contrast_preview_sender_name" msgid="8641943417589238147">"हेलेन, एडम"</string>
+    <string name="color_contrast_preview_sender_name" msgid="8641943417589238147">"हेलन, ऐडम"</string>
     <string name="color_contrast_preview_email_send_date" msgid="2108702726171600080">"दो दिन पहले"</string>
     <string name="color_contrast_preview_email_badge" msgid="4845484039428505392">"फ़ॉलो अप करें?"</string>
-    <string name="color_contrast_preview_email_title" msgid="198712116139754823">"कारोबार यात्रा की रिपोर्ट"</string>
-    <string name="color_contrast_preview_email_body" msgid="4139331665325624199">"ज़्यादा मदद पाने के लिए, कृपया \nमुझसे या हेलेन से संपर्क करें. इस रिपोर्ट को"</string>
+    <string name="color_contrast_preview_email_title" msgid="198712116139754823">"कारोबारी यात्रा की रिपोर्ट"</string>
+    <string name="color_contrast_preview_email_body" msgid="4139331665325624199">"इस मामले में मदद पाने के लिए, कृपया \nमुझसे या हेलन से संपर्क करें. इस रिपोर्ट में यह जानकारी होगी"</string>
     <string name="color_contrast_preview_email_attachment_name" msgid="852407311884814746">"क्लाइंट से जुड़े खर्चे"</string>
     <string name="accessibility_turn_screen_darker_title" msgid="5986223133285858349">"स्क्रीन की चमक को कम करें"</string>
     <string name="interaction_control_category_title" msgid="2696474616743882372">"इंटरैक्शन कंट्रोल"</string>
@@ -2143,7 +2143,7 @@
     <string name="accessibility_button_high_label" msgid="9138077512008190896">"पारदर्शी नहीं है"</string>
     <string name="accessibility_toggle_high_text_contrast_preference_title" msgid="1830189632458752698">"टेक्स्ट का कंट्रास्ट बढ़ाएं"</string>
     <string name="accessibility_toggle_high_text_contrast_preference_summary" msgid="5286411556836346180">"टेक्स्ट का रंग बदलकर काला या सफ़ेद करें. इससे बैकग्राउंड के मुताबिक कंट्रास्ट बढ़ जाता है."</string>
-    <string name="accessibility_toggle_maximize_text_contrast_preference_title" msgid="8737272017343509753">"टेक्स्ट के कंट्रास्ट को बढ़ाएं"</string>
+    <string name="accessibility_toggle_maximize_text_contrast_preference_title" msgid="8737272017343509753">"टेक्स्ट का कंट्रास्ट बढ़ाएं"</string>
     <string name="accessibility_toggle_maximize_text_contrast_preference_summary" msgid="5493999083693403489">"बैकग्राउंड के मुताबिक कंट्रास्ट को बढ़ाने के लिए, टेक्स्ट का रंग बदलकर काला या सफ़ेद करें."</string>
     <string name="accessibility_toggle_screen_magnification_auto_update_preference_title" msgid="4987009529235165664">"स्क्रीन को बड़ा करने की सुविधा को अपने आप अपडेट करें"</string>
     <string name="accessibility_toggle_screen_magnification_auto_update_preference_summary" msgid="9034532513972547720">"ऐप ट्रांज़िशन पर स्क्रीन को बड़ा दिखाना अपडेट करें"</string>
@@ -2433,7 +2433,7 @@
     <string name="history_details_title" msgid="8628584613889559355">"इतिहास विवरण"</string>
     <string name="advanced_battery_preference_title" msgid="3790901207877260883">"बैटरी खर्च"</string>
     <string name="advanced_battery_preference_summary_with_hours" msgid="954091349133320955">"पिछले 24 घंटों में हुए इस्तेमाल की जानकारी"</string>
-    <string name="advanced_battery_preference_summary" msgid="2372763700477268393">"पूरा चार्ज होने के बाद बैटरी खर्च देखें"</string>
+    <string name="advanced_battery_preference_summary" msgid="2372763700477268393">"पूरा चार्ज होने के बाद से, बैटरी खर्च"</string>
     <string name="battery_details_title" msgid="3289680399291090588">"ऐप्लिकेशन के इस्तेमाल में हुआ बैटरी खर्च"</string>
     <string name="details_subtitle" msgid="2550872569652785527">"विवरणों का उपयोग करें"</string>
     <string name="controls_subtitle" msgid="3759606830916441564">"पावर उपयोग एडजस्ट करें"</string>
@@ -3924,9 +3924,6 @@
     <string name="permit_manage_external_storage" msgid="6928847280689401761">"सभी फ़ाइलों को मैनेज करने की अनुमति दें"</string>
     <string name="allow_manage_external_storage_description" msgid="5707948153603253225">"इस ऐप्लिकेशन को अनुमति दें कि इस डिवाइस और इससे जुड़े स्टोरेज में मौजूद फ़ाइलों को पढ़ सके, उनमें बदलाव कर सके, और उन्हें मिटा सके. अनुमति दिए जाने पर, यह ऐप्लिकेशन आपको सूचना दिए बिना उन फ़ाइलों को ऐक्सेस कर सकता है."</string>
     <string name="filter_manage_external_storage" msgid="6751640571715343804">"सभी फ़ाइलें ऐक्सेस कर सकते हैं"</string>
-    <string name="voice_activation_apps_title" msgid="7130045161611529825">"बोलकर चालू करने की सुविधा वाले ऐप्लिकेशन"</string>
-    <string name="permit_voice_activation_apps" msgid="9152780172988949319">"बोलकर चालू करने की अनुमति दें"</string>
-    <string name="allow_voice_activation_apps_description" msgid="6369745626995060656">"बोलकर चालू करने की सुविधा, मंज़ूरी पा चुके ऐप्लिकेशन को बोले गए निर्देशों की मदद से चालू कर सकती है. पहले से मौजूद अडैप्टिव सेंसिंग का इस्तेमाल करके, यह पक्का किया जाता है कि डेटा निजी बना रहे.\n\n"<a href="">"सुरक्षित अडैप्टिव सेंसिंग के बारे में ज़्यादा जानें"</a></string>
     <string name="full_screen_intent_title" msgid="747270185715224130">"पूरी स्क्रीन पर सूचनाएं दिखाने की अनुमति"</string>
     <string name="permit_full_screen_intent" msgid="9035367640019960861">"इस ऐप्लिकेशन को फ़ुल स्क्रीन पर सूचनाएं दिखाने की अनुमति दें"</string>
     <string name="footer_description_full_screen_intent" msgid="7716518411349225528">"इस ऐप्लिकेशन को डिवाइस लॉक होने पर, सूचनाओं को फ़ुल स्क्रीन पर दिखाने की अनुमति दें. ऐसा करने पर, अलार्म, इनकमिंग कॉल या अन्य ज़रूरी सूचनाओं को हाइलाइट किया जा सकता है."</string>
