--- a/res/values-ky/strings.xml
+++ b/res/values-ky/strings.xml
@@ -48,9 +48,9 @@
     <string name="selective_stay_awake_title" msgid="7887645333447645168">"Оюндар, видеолор жана башкалар гана"</string>
     <string name="selective_stay_awake_summary" msgid="9055967322921984543">"Алдыңкы экран колдонулуп жаткан экранды күтүү режимине өткөрбөгөн колдонмолор үчүн күйөт"</string>
     <string name="stay_awake_on_lockscreen_title" msgid="8088456642083051068">"Улантуу үчүн сүрүп коюңуз"</string>
-    <string name="stay_awake_on_lockscreen_summary" msgid="2299351813382522952">"Колдонмону пайдалана берүү үчүн телефонду бүктөп, алдыңкы экранды өйдө сүрүңүз же экран кулпулангыча бир нече секунд күтө туруңуз"</string>
+    <string name="stay_awake_on_lockscreen_summary" msgid="8825321939913726566">"Колдонмону пайдалана берүү үчүн телефонду бүктөп, алдыңкы экранды өйдө сүрүңүз же экран кулпулангыча бир нече секунд күтө туруңуз. Оюндар жана видео колдонмолор автоматтык түрдө иштетилет."</string>
     <string name="sleep_on_fold_title" msgid="7626123024330501411">"Эч качан"</string>
-    <string name="sleep_on_fold_summary" msgid="7737992842459588846">"Түзмөгүңүздү бүктөгөнүңүздө алдыңкы экран кулпуланат"</string>
+    <string name="sleep_on_fold_summary" msgid="4191753338303043456">"Түзмөгүңүздү бүктөгөнүңүздө алдыңкы экран өчүп, кулпуланат"</string>
     <string name="auto_rotate_settings_primary_switch_title" msgid="3440951924928594520">"Автоматтык түрдө бурулууну иштетүү"</string>
     <string name="smart_rotate_text_headline" msgid="5878008933992951904">"Жүздөрдү аныктоо функциясы маңдайкы камера аркылуу автоматтык түрдө бурулууну кыйла тагыраак кылат. Сүрөттөр Google\'га эч качан жөнөтүлбөйт же анда сакталбайт."</string>
     <string name="bluetooth" msgid="8898478620943459654">"Bluetooth"</string>
@@ -572,7 +572,7 @@
     <string name="private_space_category_system" msgid="1286843321867285700">"Система"</string>
     <string name="private_space_delete_title" msgid="636873505724100006">"Жеке мейкиндикти өчүрүү"</string>
     <string name="private_space_delete_header" msgid="4594429153176776184">"Жеке мейкиндикти өчүрөсүзбү?"</string>
-    <string name="private_space_delete_summary" msgid="3344372988408565545">"Жеке мейкиндигиңиз түзмөгүңүздөн өчүрүлүп, бардык купуя колдонмолоруңуз менен алардагы нерселер жок болот. Бул аракетти артка кайтара албайсыз."</string>
+    <string name="private_space_delete_summary" msgid="3344372988408565545">"Мейкиндигиңиздеги бардык колдонмолор жана алардагы нерселер да өчүп, аларды артка кайтара албайсыз."</string>
     <string name="private_space_accounts" msgid="1078277762792056395">"Төмөнкү аккаунттар жеке мейкиндигиңизден өчүрүлөт:"</string>
     <string name="private_space_delete_button_label" msgid="1256981385318225002">"Өчүрүү"</string>
     <string name="private_space_confirm_deletion_header" msgid="3468651585498942977">"Жеке мейкиндик өчүрүлүүдө…"</string>
@@ -1998,7 +1998,7 @@
     <string name="accessibility_color_and_motion_title" msgid="2323301706545305874">"Түс жана кыймыл"</string>
     <string name="accessibility_color_contrast_title" msgid="5757724357142452378">"Түс контрасты"</string>
     <string name="accessibility_color_contrast_intro" msgid="7795090401101214930">"Контраст жогору болсо, текст, баскычтар жана сүрөтчөлөр жакшыраак көрүнөт. Өзүңүзгө ылайыктуу контрастты тандаңыз."</string>
-    <string name="color_contrast_note" msgid="7592686603372566198">"Айрым колдонмолордо түс жана тексттин контрасты боюнча айрым параметрлер колдоого алынбашы мүмкүн"</string>
+    <string name="color_contrast_note" msgid="7592686603372566198">"Түс жана текст контрастынын айрым параметрлери кээ бир колдонмолордо иштебеши мүмкүн"</string>
     <string name="accessibility_color_contrast_summary" msgid="7563237683500106632">"Текстти жана түстөрдү экрандын фонуна жараша тууралаңыз"</string>
     <string name="color_contrast_preview" msgid="6791430227535363883">"Алдын ала көрүү"</string>
     <string name="color_contrast_preview_sender_name" msgid="8641943417589238147">"Хелен, Адам"</string>
@@ -2341,7 +2341,7 @@
     <string name="accessibility_service_screen_control_description" msgid="8431940515157990426">"Кызмат экрандагы нерселерди окуп, аларды башка колдонмолордун үстүнөн көрсөтөт."</string>
     <string name="accessibility_service_action_perform_title" msgid="1449360056585337833">"Аракеттерди көрүп, аткаруу"</string>
     <string name="accessibility_service_action_perform_description" msgid="7807832069800034738">"Кызмат колдонмодо жасаган аракеттериңизге же түзмөктүн сенсорлоруна көз салып, сиздин атыңыздан буйруктарды берет."</string>
-    <string name="accessibility_dialog_button_allow" msgid="8274918676473216697">"Уруксат берүү"</string>
+    <string name="accessibility_dialog_button_allow" msgid="8274918676473216697">"Ооба"</string>
     <string name="accessibility_dialog_button_deny" msgid="2037249860078259284">"Жок"</string>
     <string name="accessibility_dialog_button_stop" msgid="7584815613743292151">"Өчүрүү"</string>
     <string name="accessibility_dialog_button_cancel" msgid="8625997437316659966">"Күйгүзүү"</string>
@@ -2665,10 +2665,10 @@
     <string name="certificate_warning_dont_install" msgid="3794366420884560605">"Орнотулбасын"</string>
     <string name="certificate_warning_install_anyway" msgid="4633118283407228740">"Баары бир орнотулсун"</string>
     <string name="cert_not_installed" msgid="6725137773549974522">"Тастыктама орнотулган жок"</string>
-    <string name="request_manage_credentials_title" msgid="596805634568013413"><b>"<xliff:g id="APP_NAME">^1</xliff:g>"</b>" колдонмосуна ушул түзмөктө тастыктамаларды орнотууга уруксат берилсинби?"</string>
+    <string name="request_manage_credentials_title" msgid="596805634568013413"><b>"<xliff:g id="APP_NAME">^1</xliff:g>"</b>" колдонмосуна ушул түзмөктө тастыктамаларды орнотууга уруксат бересизби?"</string>
     <string name="request_manage_credentials_description" msgid="8044839857171509619">"Бул тастыктамалар түзмөгүңүздүн өзгөчө идентификаторун төмөндөгү колдонмолор жана URL даректери менен бөлүшүп, сиз экениңизди ырастоо мүмкүнчүлүгүн берет"</string>
     <string name="request_manage_credentials_dont_allow" msgid="3630610197644877809">"Уруксат берилбесин"</string>
-    <string name="request_manage_credentials_allow" msgid="4910940118408348245">"Уруксат берүү"</string>
+    <string name="request_manage_credentials_allow" msgid="4910940118408348245">"Ооба"</string>
     <string name="request_manage_credentials_more" msgid="6101210283534101582">"Көбүрөөк көрсөтүү"</string>
     <string name="certificate_management_app" msgid="8086699498358080826">"Тастыктамаларды башкарган колдонмо"</string>
     <string name="no_certificate_management_app" msgid="3025739370424406717">"Жок"</string>
@@ -2711,7 +2711,7 @@
     <string name="device_admin_warning_simplified" msgid="2715756519899116115">"Бул түзмөк <xliff:g id="APP_NAME">%1$s</xliff:g> аркылуу башкарылып, көзөмөлдөнөт."</string>
     <string name="device_admin_status" msgid="6332571781623084064">"Түзмөктү башкарган колдонмо иштетилип, <xliff:g id="APP_NAME">%1$s</xliff:g> төмөнкү аракеттерди аткара алат:"</string>
     <string name="profile_owner_add_title" msgid="2774489881662331549">"Профиль башкаргычы жандырылсынбы?"</string>
-    <string name="profile_owner_add_title_simplified" msgid="2320828996993774182">"Көзөмөлгө уруксат берилсинби?"</string>
+    <string name="profile_owner_add_title_simplified" msgid="2320828996993774182">"Көзөмөлгө уруксат бересизби?"</string>
     <string name="adding_profile_owner_warning" msgid="6868275476058020513">"Улантсаңыз, профилиңизди администратор башкарып, ал жеке дайын-даректериңиз менен кошо башка тийиштүү маалыматтарды да сактап турат.\n\nАдминистратор бул колдонуучунун параметрлерин, кирүү мүмкүнчүлүгүн, колдонмолорду жана маалыматтарды, ошондой эле тармактагы аракеттер менен түзмөгүңүздүн жайгашкан жери тууралуу маалыматты көзөмөлдөп, башкара алат."</string>
     <string name="admin_disabled_other_options" msgid="8122039047419172139">"Башка параметрлерди администратор өчүрүп койгон"</string>
     <string name="admin_more_details" msgid="4928985331640193758">"Кененирээк"</string>
@@ -3924,9 +3924,6 @@
     <string name="permit_manage_external_storage" msgid="6928847280689401761">"Бардык файлдарды башкарууга уруксат берүү"</string>
     <string name="allow_manage_external_storage_description" msgid="5707948153603253225">"Бул колдонмого түзмөктөгү жана башка байланышкан сактагычтардагы бардык файлдарды көрүп, өзгөртүп жана өчүрүүгө уруксат бересизби? Колдонмо файлдарды сизге айтпай пайдалана алат."</string>
     <string name="filter_manage_external_storage" msgid="6751640571715343804">"Бардык файлдарга мүмкүнчүлүк бар"</string>
-    <string name="voice_activation_apps_title" msgid="7130045161611529825">"Үн менен иштетилген колдонмолор"</string>
-    <string name="permit_voice_activation_apps" msgid="9152780172988949319">"Үндү иштетүүгө уруксат берүү"</string>
-    <string name="allow_voice_activation_apps_description" msgid="6369745626995060656">"Ырасталган колдонмолорду үн буйругу менен иштете аласыз. Куралган адаптивдик таануу тутумунун жардамы менен маалыматтар сизге гана жеткиликтүү болот.\n\n"<a href="">"Коопсуз адаптивдик таануу тууралуу кеңири маалымат"</a></string>
     <string name="full_screen_intent_title" msgid="747270185715224130">"Толук экрандагы билдирмелер"</string>
     <string name="permit_full_screen_intent" msgid="9035367640019960861">"Бул колдонмого толук экрандагы билдирмелерди көрсөтүүгө уруксат берүү"</string>
     <string name="footer_description_full_screen_intent" msgid="7716518411349225528">"Бул колдонмого түзмөк кулпуланып турганда толук экрандагы билдирмелерди көрсөтүүгө уруксат бериңиз. Колдонмолор муну ойготкучтарды, кирүүчү чалууларды же башка шашылыш билдирмелерди көрсөтүү үчүн колдонушат."</string>
@@ -4520,7 +4517,7 @@
     <string name="carrier_settings_title" msgid="6959295328730560529">"Оператордун параметрлери"</string>
     <string name="cdma_lte_data_service" msgid="6937443423651347345">"Тарифтик планды жөндөө"</string>
     <string name="mobile_data_settings_title" msgid="3927524078598009792">"Мобилдик Интернет"</string>
-    <string name="mobile_data_settings_summary" msgid="7323978798199919063">"Интернетке мобилдик тармак аркылуу чыгуу"</string>
+    <string name="mobile_data_settings_summary" msgid="7323978798199919063">"Интернетке мобилдик тармак аркылуу чыгасыз"</string>
     <string name="mobile_data_settings_summary_auto_switch" msgid="7851549787645698945">"Тейлөө аймагына келгенде, телефон автоматтык түрдө бул операторго которулат"</string>
     <string name="mobile_data_settings_summary_unavailable" msgid="9176513507571883986">"SIM карта жеткиликсиз"</string>
     <string name="calls_preference" msgid="2166481296066890129">"Чалуулардын параметрлери"</string>
@@ -4860,10 +4857,10 @@
     <string name="reset_importance_completed" msgid="3595536767426097205">"Билдирмелердин маанилүүлүгүн баштапкы абалга келтирүү аяктады."</string>
     <string name="apps_dashboard_title" msgid="3269953499954393706">"Колдонмолор"</string>
     <string name="bluetooth_message_access_notification_content" msgid="5111712860712823893">"Түзмөк билдирүүлөрүңүздү көргөнү жатат. Чоо-жайын көрүү үчүн таптап коюңуз."</string>
-    <string name="bluetooth_message_access_dialog_title" msgid="9009836130395061579">"Билдирүүлөрдү көрүүгө уруксат берилсинби?"</string>
+    <string name="bluetooth_message_access_dialog_title" msgid="9009836130395061579">"Билдирүүлөрдү көрүүгө уруксат бересизби?"</string>
     <string name="bluetooth_message_access_dialog_content" msgid="7186694737578788487">"Bluetooth түзмөгү (<xliff:g id="DEVICE_NAME_0">%1$s</xliff:g>) билдирүүлөрүңүздү көргөнү жатат.\n\n<xliff:g id="DEVICE_NAME_1">%2$s</xliff:g> түзмөгүнө буга чейин туташкан эмессиз."</string>
     <string name="bluetooth_phonebook_access_notification_content" msgid="9175220052703433637">"Түзмөк байланыштарыңызды жана чалуулар тизмесин көргөнү жатат. Чоо-жайын көрүү үчүн таптап коюңуз."</string>
-    <string name="bluetooth_phonebook_access_dialog_title" msgid="7624607995928968721">"Байланыштар менен чалуулар тизмесин көрүүгө уруксат берилсинби?"</string>
+    <string name="bluetooth_phonebook_access_dialog_title" msgid="7624607995928968721">"Байланыштар менен чалуулар тизмесин көрүүгө уруксат бересизби?"</string>
     <string name="bluetooth_phonebook_access_dialog_content" msgid="959658135522249170">"Bluetooth түзмөгү (<xliff:g id="DEVICE_NAME_0">%1$s</xliff:g>) байланыштарыңызды жана чалуулар тизмесин көргөнү жатат. Буга кирүүчү жана чыгуучу чалуулар кирет.\n\n<xliff:g id="DEVICE_NAME_1">%2$s</xliff:g> түзмөгүнө буга чейин туташкан эмессиз."</string>
     <string name="category_name_brightness" msgid="8520372392029305084">"Жарыктыгы"</string>
     <string name="category_name_lock_display" msgid="8310402558217129670">"Экранды кулпулоо"</string>
