--- a/res/values-my/strings.xml
+++ b/res/values-my/strings.xml
@@ -48,9 +48,9 @@
     <string name="selective_stay_awake_title" msgid="7887645333447645168">"ဂိမ်း၊ ဗီဒီယို စသည်တို့သာ"</string>
     <string name="selective_stay_awake_summary" msgid="9055967322921984543">"စခရင် ငြိမ်မသွားအောင်လုပ်သည့် အက်ပ်များအတွက် ရှေ့မျက်နှာပြင်ပြကွက် ဖွင့်သည်"</string>
     <string name="stay_awake_on_lockscreen_title" msgid="8088456642083051068">"ရှေ့ဆက်ရန် အပေါ်သို့ ပွတ်ဆွဲပါ"</string>
-    <string name="stay_awake_on_lockscreen_summary" msgid="2299351813382522952">"အက်ပ်ဆက်သုံးရန် ဖုန်းကိုခေါက်ပြီး ရှေ့မျက်နှာပြင်ပြကွက်တွင် အပေါ်သို့ ပွတ်ဆွဲနိုင်သည်။ သို့မဟုတ် ဖန်သားပြင်လော့ခ်ချရန် စက္ကန့်အနည်းငယ် စောင့်နိုင်သည်"</string>
+    <string name="stay_awake_on_lockscreen_summary" msgid="8825321939913726566">"အက်ပ်ဆက်သုံးရန် ဖုန်းကိုခေါက်ပြီး ရှေ့မျက်နှာပြင်ပြကွက်တွင် အပေါ်သို့ ပွတ်ဆွဲနိုင်သည် (သို့) ဖန်သားပြင်လော့ခ်ချရန် စက္ကန့်အနည်းငယ် စောင့်နိုင်သည်။ ဂိမ်းနှင့် ဗီဒီယိုအက်ပ်များကို အလိုအလျောက် ဆက်သုံးနိုင်ပါမည်။"</string>
     <string name="sleep_on_fold_title" msgid="7626123024330501411">"ဘယ်တော့မှ"</string>
-    <string name="sleep_on_fold_summary" msgid="7737992842459588846">"စက်ကို ခေါက်သည့်အခါ ရှေ့မျက်နှာပြင်ပြကွက်ကို လော့ခ်ချသည်"</string>
+    <string name="sleep_on_fold_summary" msgid="4191753338303043456">"ဖုန်းကို ခေါက်လိုက်သည့်အခါ ရှေ့မျက်နှာပြင်ပြကွက် ပိတ်ပြီး လော့ခ်ချသည်"</string>
     <string name="auto_rotate_settings_primary_switch_title" msgid="3440951924928594520">"အလိုအလျောက်လှည့်ခြင်းကို သုံးရန်"</string>
     <string name="smart_rotate_text_headline" msgid="5878008933992951904">"အလိုအလျောက်လှည့်ခြင်း ပိုမိုတိကျစေရန် ‘မျက်နှာကို မှတ်မိခြင်း’ က အရှေ့ကင်မရာကို သုံးသည်။ ပုံများကို ဘယ်တော့မှ မသိမ်းပါ (သို့) Google သို့ မပို့ပါ။"</string>
     <string name="bluetooth" msgid="8898478620943459654">"ဘလူးတုသ်"</string>
@@ -1997,14 +1997,14 @@
     <string name="display_category_title" msgid="6638191682294461408">"ဖန်သားပြင် ပြသမှု"</string>
     <string name="accessibility_color_and_motion_title" msgid="2323301706545305874">"အရောင်နှင့် လှုပ်ရှားမှု"</string>
     <string name="accessibility_color_contrast_title" msgid="5757724357142452378">"အရောင်ခြားနားမှု"</string>
-    <string name="accessibility_color_contrast_intro" msgid="7795090401101214930">"ပိုလင်းပါက စာသား၊ ခလုတ်နှင့် သင်္ကေတများ ပိုပေါ်လွင်ပါသည်။ သင့်အတွက် အသင့်တော်ဆုံး အလင်းအမှောင်ကို ရွေးပါ။"</string>
-    <string name="color_contrast_note" msgid="7592686603372566198">"အက်ပ်အချို့သည် အရောင်နှင့်စာသား အလင်းအမှောင် ဆက်တင်အားလုံးကို ပံ့ပိုးနိုင်မည်မဟုတ်ပါ"</string>
+    <string name="accessibility_color_contrast_intro" msgid="7795090401101214930">"အရောင်ခြားနားမှုမြင့်ပါက စာသား၊ ခလုတ်နှင့် သင်္ကေတများ ပိုပေါ်လွင်ပါသည်။ သင့်အတွက် အသင့်တော်ဆုံး အရောင်ခြားနားမှုကို ရွေးပါ။"</string>
+    <string name="color_contrast_note" msgid="7592686603372566198">"အက်ပ်အချို့သည် အရောင်နှင့်စာသား ခြားနားမှု ဆက်တင်အားလုံးကို မပံ့ပိုးနိုင်ပါ"</string>
     <string name="accessibility_color_contrast_summary" msgid="7563237683500106632">"သင့်ဖန်သားပြင် နောက်ခံအရောင်ပေါ်မူတည်၍ အရောင်နှင့် စာသား မြင်ရပုံကို ချိန်ညှိနိုင်သည်"</string>
     <string name="color_contrast_preview" msgid="6791430227535363883">"အစမ်းကြည့်ရှုခြင်း"</string>
     <string name="color_contrast_preview_sender_name" msgid="8641943417589238147">"Helen၊ Adam"</string>
     <string name="color_contrast_preview_email_send_date" msgid="2108702726171600080">"လွန်ခဲ့သော ၂ ရက်"</string>
-    <string name="color_contrast_preview_email_badge" msgid="4845484039428505392">"လိုက်ကြည့်မလား။"</string>
-    <string name="color_contrast_preview_email_title" msgid="198712116139754823">"အလုပ်ကိစ္စခရီးစဉ် အစီရင်ခံစာ"</string>
+    <string name="color_contrast_preview_email_badge" msgid="4845484039428505392">"ဆက်လုပ်မလား။"</string>
+    <string name="color_contrast_preview_email_title" msgid="198712116139754823">"အလုပ်ခရီးစဉ် အစီရင်ခံစာ"</string>
     <string name="color_contrast_preview_email_body" msgid="4139331665325624199">"နောက်ထပ်အကူအညီအတွက် ကျွန်ုပ် (သို့) Helen ထံ\nဆက်သွယ်ပေးပါ။ ဤအစီရင်ခံစာသည်"</string>
     <string name="color_contrast_preview_email_attachment_name" msgid="852407311884814746">"ကလိုင်းယင့် ကုန်ကျစရိတ်များ"</string>
     <string name="accessibility_turn_screen_darker_title" msgid="5986223133285858349">"ဖန်သားပြင်ကို ပိုမှောင်အောင်လုပ်ခြင်း"</string>
@@ -3924,9 +3924,6 @@
     <string name="permit_manage_external_storage" msgid="6928847280689401761">"ဖိုင်အားလုံးကို စီမံရန် သုံးခွင့်ပေးပါ"</string>
     <string name="allow_manage_external_storage_description" msgid="5707948153603253225">"ဤစက်ပစ္စည်း (သို့) ချိတ်ဆက်ထားသော သိုလှောင်နေရာရှိ ဖိုင်များအားလုံးကို ဖတ်ရန်၊ ပြင်ဆင်ရန်နှင့် ဖျက်ရန် ဤအက်ပ်ကို ခွင့်ပြုပါ။ ခွင့်ပြုပြီးပါက အက်ပ်သည် သင့်အား အသိမပေးဘဲ ဖိုင်များကို အသုံးပြုနိုင်ပါမည်။"</string>
     <string name="filter_manage_external_storage" msgid="6751640571715343804">"ဖိုင်အားလုံးကို အသုံးပြုနိုင်သည်"</string>
-    <string name="voice_activation_apps_title" msgid="7130045161611529825">"အသံဖြင့်ဖွင့်ထားသည့် အက်ပ်များ"</string>
-    <string name="permit_voice_activation_apps" msgid="9152780172988949319">"အသံဖြင့်ဖွင့်ခြင်း ခွင့်ပြုရန်"</string>
-    <string name="allow_voice_activation_apps_description" msgid="6369745626995060656">"အသံဖြင့်ဖွင့်ခြင်းသည် အတည်ပြုထားသောအက်ပ်များကို အသံကွန်မန်းဖြင့် ဖွင့်ပေးပြီး လက်လွတ်ဆောင်ရွက်နိုင်သည်။ အသင့်ပါသည့် အလိုက်သင့်အာရုံခံခြင်းသည် ဒေတာကို သင့်အတွက်သာ သီးသန့်ရှိစေသည်။\n\n"<a href="">"အကာအကွယ်ပေးထားသည့် အလိုက်သင့်အာရုံခံခြင်းအကြောင်း နောက်ထပ်အချက်အလက်များ"</a></string>
     <string name="full_screen_intent_title" msgid="747270185715224130">"ဖန်သားပြင်အပြည့် အကြောင်းကြားချက်များ"</string>
     <string name="permit_full_screen_intent" msgid="9035367640019960861">"ဤအက်ပ်မှ ဖန်သားပြင်အပြည့် အကြောင်းကြားချက် ခွင့်ပြုရန်"</string>
     <string name="footer_description_full_screen_intent" msgid="7716518411349225528">"စက်ပစ္စည်းလော့ခ်ချထားစဉ် ဖန်သားပြင်အပြည့် နေရာယူမည့် အကြောင်းကြားချက်များကို ဤအက်ပ်အား ပြသခွင့်ပြုနိုင်သည်။ နှိုးစက်၊ အဝင်ခေါ်ဆိုမှု (သို့) အခြားအရေးတကြီး အကြောင်းကြားချက်များကို မြင်သာအောင်လုပ်ရန် အက်ပ်များက ၎င်းတို့ကို သုံးနိုင်သည်။"</string>
