--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -48,9 +48,9 @@
     <string name="selective_stay_awake_title" msgid="7887645333447645168">"Лише ігри, відео тощо"</string>
     <string name="selective_stay_awake_summary" msgid="9055967322921984543">"Для додатків, які перешкоджають блокуванню пристрою, активується передній екран"</string>
     <string name="stay_awake_on_lockscreen_title" msgid="8088456642083051068">"Якщо провести пальцем угору"</string>
-    <string name="stay_awake_on_lockscreen_summary" msgid="2299351813382522952">"Складіть телефон і проведіть пальцем угору по передньому екрану, щоб і надалі користуватися додатком, або зачекайте кілька секунд, і екран заблокується"</string>
+    <string name="stay_awake_on_lockscreen_summary" msgid="8825321939913726566">"Складіть телефон і проведіть пальцем угору по передньому екрану, щоб і надалі користуватися додатком, або зачекайте кілька секунд, і екран заблокується. Ігри й додатки для відео продовжуватимуть працювати автоматично."</string>
     <string name="sleep_on_fold_title" msgid="7626123024330501411">"Ніколи"</string>
-    <string name="sleep_on_fold_summary" msgid="7737992842459588846">"Передній екран блокується, коли ви складаєте пристрій"</string>
+    <string name="sleep_on_fold_summary" msgid="4191753338303043456">"Коли ви складатимете пристрій, передній екран вимикатиметься й блокуватиметься"</string>
     <string name="auto_rotate_settings_primary_switch_title" msgid="3440951924928594520">"Увімкнути автообертання"</string>
     <string name="smart_rotate_text_headline" msgid="5878008933992951904">"Технологія розпізнавання облич використовує фронтальну камеру, щоб підвищувати точність автообертання. Зображення ніколи не зберігаються й не надсилаються на сервери Google."</string>
     <string name="bluetooth" msgid="8898478620943459654">"Bluetooth"</string>
@@ -1844,7 +1844,7 @@
     <string name="languages_settings" msgid="5784775502251770671">"Мови"</string>
     <string name="keyboard_settings" msgid="184185708597386454">"Клавіатура"</string>
     <string name="language_empty_list_user_restricted" msgid="8050367405839231863">"У вас немає дозволу змінювати мову пристрою."</string>
-    <string name="language_keyboard_settings_title" msgid="7934844313233544557">"Мова та введення"</string>
+    <string name="language_keyboard_settings_title" msgid="7934844313233544557">"Мова й введення"</string>
     <string name="input_assistance" msgid="3437568284144952104">"Інструменти"</string>
     <string name="keyboard_settings_category" msgid="5392847229300117064">"Клавіатура та методи введення"</string>
     <string name="system_language" msgid="1146762166579643257">"Мови системи"</string>
@@ -3924,9 +3924,6 @@
     <string name="permit_manage_external_storage" msgid="6928847280689401761">"Надати доступ до керування всіма файлами"</string>
     <string name="allow_manage_external_storage_description" msgid="5707948153603253225">"Дозволити цьому додатку переглядати, змінювати та видаляти всі файли на цьому пристрої або інших підключених носіях пам\'яті. Після надання дозволу додаток може отримувати доступ до файлів без вашого відома."</string>
     <string name="filter_manage_external_storage" msgid="6751640571715343804">"Мають доступ до всіх файлів"</string>
-    <string name="voice_activation_apps_title" msgid="7130045161611529825">"Додатки з активацією голосом"</string>
-    <string name="permit_voice_activation_apps" msgid="9152780172988949319">"Дозволити активацію голосом"</string>
-    <string name="allow_voice_activation_apps_description" msgid="6369745626995060656">"За допомогою активації голосом ви можете вмикати схвалені додатки, використовуючи голосові команди. Вбудована функція адаптивного розпізнавання забезпечує конфіденційність даних (вони доступні лише вам).\n\n"<a href="">"Докладніше про захищене адаптивне розпізнавання"</a></string>
     <string name="full_screen_intent_title" msgid="747270185715224130">"Сповіщення на весь екран"</string>
     <string name="permit_full_screen_intent" msgid="9035367640019960861">"Дозволити сповіщення на весь екран із цього додатка"</string>
     <string name="footer_description_full_screen_intent" msgid="7716518411349225528">"Цьому додатку буде дозволено показувати сповіщення на весь екран, коли пристрій заблоковано. Додатки можуть використовувати це налаштування, щоб показувати будильники, сповіщення про вхідні дзвінки або інші термінові сповіщення."</string>
@@ -5094,7 +5091,7 @@
     <string name="color_selector_dialog_cancel" msgid="8667350644753900701">"Скасувати"</string>
     <string name="contrast_title" msgid="6885768151336508075">"Контраст"</string>
     <string name="contrast_standard" msgid="1097297089917185235">"Стандартний"</string>
-    <string name="contrast_default" msgid="8918545965525226966">"За умовчанням"</string>
+    <string name="contrast_default" msgid="8918545965525226966">"Стандартний"</string>
     <string name="contrast_medium" msgid="384414510709285811">"Середній"</string>
     <string name="contrast_high" msgid="3988567609694797696">"Високий"</string>
     <string name="dock_multi_instances_not_supported_text" msgid="3513493664467667084">"Цей додаток можна відкрити лише в одному вікні"</string>
